--- a/eform-client/src/app/plugins/modules/backend-configuration-pn/modules/calendar/components/calendar-week-grid/calendar-week-grid.component.scss
+++ b/eform-client/src/app/plugins/modules/backend-configuration-pn/modules/calendar/components/calendar-week-grid/calendar-week-grid.component.scss
@@ -66,6 +66,7 @@
   th.mat-mdc-header-cell {
     padding: 0 !important;
     vertical-align: top;
+    overflow: visible;
   }
 
   .today-col.mat-mdc-header-cell {
@@ -110,6 +111,7 @@
   cursor: pointer;
   position: relative;
   border-left: 1px solid #dadce0;
+  overflow: visible;
 }
 
 .day-body {
